# appcfg

./: .gitignore  .travis.yml  CHANGELOG.md  mkapidoc.py  pyproject.toml  readme.md  release.py  tox.ini
.github/workflows/: build.yml
appcfg/: __init__.py  appcfg.py  util.py
tests/: test_appcfg.py  test_util.py
