[tool.poetry]
name = "appcfg"
version = "1.1.1"
description = "Flexible hierarchic Python application configuration"
authors = ["bjoluc <mail@bjoluc.de>"]
license = "MIT"
readme = "readme.md"
homepage = "https://github.com/bjoluc/appcfg"
repository = "https://github.com/bjoluc/appcfg"
documentation = "https://github.com/bjoluc/appcfg#readme"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
    "Topic :: Software Development :: Libraries",
    "Intended Audience :: Developers",
    "Typing :: Typed"
]
keywords = [
    "app",
    "application",
    "config",
    "configuration",
    "env",
    "environment",
    "node-config",
]

[tool.poetry.dependencies]
python = "^3.7"
deepmerge = "^0.1.0"
pyyaml = { version = "^5.3.1", optional = true }

[tool.poetry.extras]
yaml = ["pyyaml"]

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
pytest-watch = "^4.2.0"
pytest-voluptuous = "^1.1.0"
pyfakefs = "^4.0.2"
flake8 = "^3.8.2"
black = "^19.10b0"
doc2md = "^0.1.0"
coverage = { extras = ["toml"], version = "^5.5" }
tox = "^3.26.0"
tox-poetry-installer = {extras = ["poetry"], version = "^0.10.0"}
# tox-poetry-installer@0.10.0 somehow doesn't install pyyaml when `extras = yaml` is set in the tox
# environment config, hence:
pyyaml = "^5.3.1" 

[tool.coverage.run]
branch = true
include = ["appcfg/*", "tests/*"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
